--- a/styles/index.css
+++ b/styles/index.css
@@ -1,7 +1,7 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
-  padding: 0.05rem 1rem;
+  padding: 0.05rem;
   background-color: #1B1B1B;
   color: whitesmoke;
 }
