--- a/styles/index.css
+++ b/styles/index.css
@@ -1,8 +1,8 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
-    background-color: #1B1B1B;
-  color: whitesmoke;
+    background-color: white;
+  color: #1B1B1B;
 }
 
 img {
@@ -20,13 +20,14 @@ img {
   background-repeat: no-repeat;
   height: 90vh;
   background-size: cover;
-  color: whitesmoke;
+  color: white;
 }
 
 h1 {
   text-align: center;
   padding: 1em;
   font-size: 2.5rem;
+  text-shadow: 0.25em 0.25em 0.25em rgba(0,0,0,0.25);
 }
 
 p {
@@ -45,11 +46,11 @@ li {
 
 #navbar {
   overflow: hidden;
-  background: #1B1B1B;
+  background: white;
 }
 
 #navbar a {
-  background: #1B1B1B;
+  background: white;
   float: left;
   display: block;
   text-align: center;
@@ -131,19 +132,27 @@ li {
   color: white;
   text-decoration: none;
   font-weight: bold;
+  transition: all 0.3s ease 0s;
+}
+
+.email:hover {
+  text-shadow: 0em 0em 0.2em white;
+  transition: all 0.3s ease 0s;
+  box-shadow: 0em 0em 1em rgba(0,0,0,0.25);
 }
 
 .card {
-  background-color: limegreen;
+  background-color: orange;
   color: white;
   padding: 1rem;
   font-size: 1.1rem;
+  /* box-shadow: 0.25em 0.25em 0.5em rgba(0,0,0,0.25); */
 }
 
 .card a {
   text-decoration: none;
   text-decoration: underline;
-  color: limegreen;
+  color: orange;
   background-color: white;
 }
 
@@ -184,4 +193,13 @@ li {
   text-decoration: none;
   font-weight: bold;
   text-align: center;
+  transition: all 0.3s ease 0s;
+
 }
+
+.CTA:hover {
+  text-shadow: 0em 0em 0.2em white;
+  transition: all 0.3s ease 0s;
+  box-shadow: 0em 0em 1em rgba(0,0,0,0.25);
+}
+
