--- a/styles/index.css
+++ b/styles/index.css
@@ -10,6 +10,10 @@ img {
   display: block;
 }
 
+.profile-pic {
+  border-radius: 0.9em;
+}
+
 .header {
   display: flex;
   background-color: #1B1B1B;
@@ -27,7 +31,7 @@ h1 {
   text-align: center;
   padding: 1em;
   font-size: 2.5rem;
-  text-shadow: 0.25em 0.25em 0.25em rgba(0,0,0,0.25);
+  text-shadow: 0.1em 0.1em 0.1em rgba(0,0,0,0.25);
 }
 
 p {
@@ -49,6 +53,9 @@ li {
   background: white;
 }
 
+a {
+  transition: 0.3s;
+}
 #navbar a {
   background: white;
   float: left;
@@ -132,12 +139,10 @@ li {
   color: white;
   text-decoration: none;
   font-weight: bold;
-  transition: all 0.3s ease 0s;
 }
 
 .email:hover {
   text-shadow: 0em 0em 0.2em white;
-  transition: all 0.3s ease 0s;
   box-shadow: 0em 0em 1em rgba(0,0,0,0.25);
 }
 
@@ -146,14 +151,20 @@ li {
   color: white;
   padding: 1rem;
   font-size: 1.1rem;
-  /* box-shadow: 0.25em 0.25em 0.5em rgba(0,0,0,0.25); */
+  border-radius: 1em;
 }
 
 .card a {
   text-decoration: none;
   text-decoration: underline;
-  color: orange;
+  font-weight: bold;
+  color: white;
+  background-color: orange;
+}
+
+.card a:hover {
   background-color: white;
+  color: orange;
 }
 
 .cards {
@@ -187,19 +198,16 @@ li {
   background-color: #ff2626;
   border-radius: 0.4em;
   margin: 10vh;
-  /* margin-bottom: 4em; */
   padding: 1em;
   color: white;
   text-decoration: none;
   font-weight: bold;
   text-align: center;
-  transition: all 0.3s ease 0s;
 
 }
 
 .CTA:hover {
   text-shadow: 0em 0em 0.2em white;
-  transition: all 0.3s ease 0s;
   box-shadow: 0em 0em 1em rgba(0,0,0,0.25);
 }
 
